feat:test canvas

--- a/front_vue/index.html
+++ b/front_vue/index.html
@@ -184,7 +184,7 @@
         </div>
         <div class="model model_operation">
           <div class="overlook">
-            <img class="overlookImg" src="./img/俯视.png" alt="" />
+            <!-- <img class="overlookImg" src="./img/俯视.png" alt="" /> -->
             <canvas width="400" height="400" id="wptCanvas"></canvas>
             <!-- <div class="wptList">
                 <li class="wptItem">
